1. Swagger API 사용법 확인 및 pom 적용 2. springboot-secure 로그인 설정 추가 (application.xml) 3. JPA 사용 기본 API 구조 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     username: myuser
     password: kwater12!
     driver-class-name: com.mysql.cj.jdbc.Driver # 데이터베이스 연결시 필요 드라이버 명시적으로 설정
+  security:
+    user:
+      name: admin
+      password: 1234
 
   jpa:
     #database-platform: org.hibernate.dialect.H2Dialect
