1. swagger POST 에러 해결. 2. application.yml hibernate 속성 변경 3. spring-boot-devtools 의존성 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,9 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect # mysql 문법을 사용하도록 설정하는 옵션
     hibernate:
         ddl-auto: update
+        type:
+          descriptor:
+              sql: trace
     show-sql: true
     properties:
       hibernate:
