--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  mvc:
+    throw-exception-if-no-handler-found: true
+  web:
+    resource:
+      add-mappings: false
   datasource:
     #url: jdbc:h2:mem:testdb
     #driver-class-name: org.h2.Driver
